@@ -31,6 +31,7 @@ class InfoBoxContentTeamCode : public InfoBoxContent
 public:
   virtual void Update(InfoBoxData &data) override;
   virtual bool HandleKey(const InfoBoxKeyCodes keycode) override;
+  virtual const InfoBoxPanel *GetDialogContent() override;
 };
 
 void
