@@ -15,6 +15,7 @@ Version 6.7 - not yet released
 * infoboxes
   - new content "Speed task last hour"
   - new content "Next distance (nominal)"
+  - new panel for "Team code" provides quick access to team code settings (#2899)
 * tasks
   - custom "start requires arm" setting (#2782)
   - new option to disable OLC optimisation
